# space

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  space.json
.cargo/: config.toml
.claude/: settings.local.json
.git-hooks/: post-checkout  pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  other.yaml
.github/actions/detect-and-install-rust-toolchain/: action.yaml
.github/actions/detect-rust-toolchain-version/: action.yaml
.github/actions/install-buildit/: action.yaml
.github/actions/install-tmux/: action.yaml
.github/actions/package-linux/: action.yaml
.github/actions/package-macos/: action.yaml
.github/actions/package-windows/: action.yaml  package-release-binaries.ps1  update-scoop-manifest.ps1
.github/actions/run-all-tests/: action.yaml
.github/workflows/: benchmark.yaml  build-and-release.yaml  cache_buildit.yaml  coverage.yaml  lint.yaml  test.yaml
benches/: arenas.rs  arenas_alloc.rs  arenas_read.rs  directory_item_build.rs  directory_item_build_x2.rs  directory_item_build_x3.rs
buildit/: Cargo.toml
buildit/.claude/: settings.local.json
buildit/src/: benchmark.rs  command.rs  coverage.rs  main.rs  version.rs
install/: install.ps1  install.sh
install/scoop/: space.json
src/: directory_item.rs  directory_item_test.rs  fast_arena.rs  fast_arena_test.rs  lib.rs  logging.rs  logging_test.rs  main.rs  main_test.rs  rapid_arena.rs  rapid_arena_test.rs  size.rs  size_test.rs  space_bench.rs  space_bench_test.rs  test_directory_utils.rs  test_utils.rs
src/cli/: cli_command.rs  crossterm_input_event_source.rs  environment.rs  input_event_source.rs  mod.rs  row_item.rs  row_item_prefix_test.rs  row_item_test.rs  scan_worker.rs  scan_worker_test.rs  skin.rs  skin_test.rs  tui.rs  tui_test.rs  tui_test_utils.rs  view_command.rs  view_command_test.rs  view_state.rs  view_state_selection_test.rs  view_state_test.rs  view_state_test_utils.rs
src/cli/tui/: dialog_test.rs  dialogs.rs  filter_test.rs  help.rs  help_sections.rs  key_handlers.rs  key_handlers_filter_test.rs  key_handlers_normal_test.rs  key_handlers_test.rs  mod.rs  nav_test.rs  render_test.rs  scan_drain.rs  scan_drain_edge_test.rs  scan_render_loop_test.rs  scan_test.rs
src/cli/tui/rendering/: area.rs  mod.rs  table.rs  title_bar.rs  title_bar_test.rs
src/cli/view_command/: interactive.rs  mod.rs  non_interactive.rs  non_interactive_render.rs  non_interactive_render_test.rs  skin_selection.rs  skin_selection_test.rs
src/cli/view_state/: config.rs  config_test.rs  deletion.rs  deletion_test.rs  mod.rs  navigation.rs  navigation_expand_test.rs  navigation_test.rs  regex_filter.rs  regex_filter_edge_test.rs  regex_filter_test.rs  rescan.rs  scan.rs  scan_auto_expand_test.rs  scan_child_test.rs  scan_grandchild_order_test.rs  scan_grandchild_resort_test.rs  scan_grandchild_test.rs  scan_helpers.rs  scan_sort_test.rs  scan_spinner_count_test.rs  scan_spinner_test.rs  scan_test.rs  selection.rs  selection_tracking_save_test.rs  selection_tracking_test.rs  table_rows.rs  table_rows_test.rs  visible_rows.rs
