[package]
authors = ["Emile van Reenen <emile@van-reenen.com>"]
categories = ["command-line-utilities", "filesystem"]
description = "A fast Rust library for analyzing and cleaning disk space on your filesystem"
documentation = "https://docs.rs/space-rs"
edition = "2021"
include = ["src", "Cargo.toml", "README.md", "LICENSE", "docs"]
keywords = ["disk", "space", "usage"]
license = "MIT"
name = "space_rs"
readme = "README.md"
repository = "https://github.com/emilevr/space"
rust-version = "1.70"
version = "0.0.0"

[lib]
name = "space_rs"
path = "src/lib.rs"

[[bin]]
name = "space"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "space-bench"
path = "src/space_bench.rs"
required-features = ["bench"]

[[bench]]
name = "arenas_alloc"
harness = false

[[bench]]
name = "arenas_read"
harness = false

[[bench]]
name = "directory_item_build"
harness = false

[[bench]]
name = "directory_item_build_x2"
harness = false

[features]
# Uncomment the "default = ..." below to include the nightly features in the build by default, and in the Rust
# analyzer. If you do so then you will have to add "+nightly" to cargo commands, e.g. "cargo +nightly build".
#default = ["cli", "nightly"]
default = ["cli"]
nightly = []
cli = ["clap/derive", "crossterm", "dirs", "ratatui", "serde/derive", "serde_yaml", "log", "log4rs"]
bench = ["clap/derive", "crossterm", "dirs", "ratatui", "criterion"]

[dependencies]
anyhow = "^1.0.72"
clap = { version = "^4.3.21", optional = true }
criterion = { version = "^0.5.1", default-features = false, features = [], optional = true }
crossterm = { version = "^0.27.0", optional = true }
dirs = { version = "^5.0.1", optional = true }
log = { version = "^0.4.20", optional = true }
log4rs = { version = "^1.2.0", optional = true }
ratatui = { version = "^0.23.0", default-features = false, features = ["crossterm"], optional = true }
rayon = "^1.7.0"
serde = { version = "^1.0.188", features = ["derive"], optional = true }
serde_yaml = { version = "^0.9.25", optional = true }
unicode-segmentation = "^1.10.1"

[dev-dependencies]
bumpalo = { version = "^3.14.0", features = ["collections"] }
bumpalo-herd = "^0.1.2"
criterion = "^0.5.1"
id-arena = { version = "^2.2.1", features = ["rayon"] }
memory-stats = "^1.1.0"
mockall = "0.11.4"
regex = "^1.9.5"
rstest = "^0.18.2"
uuid = { version = "^1.4.1", features = ["v4"] }
